EKS/redis-cli-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cli
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-cli
  template:
    metadata:
      labels:
        app: redis-cli
    spec:
      restartPolicy: Always
      containers:
        - name: redis-cli
          image: redis:6-alpine
          command: ["/bin/sh"]
          args: ["-c", "sleep 100000"]
