EKS/redis-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-server
  namespace: demo
spec:
  serviceName: redis-service
  replicas: 1
  selector:
    matchLabels:
      app: redis-server
  template:
    metadata:
      labels:
        app: redis-server
    spec:
      containers:
        - name: redis
          image: redis:6-alpine
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /var/lib/redis
          resources:
            limits:
              cpu: "200m"
              memory: "200Mi"
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-pvc
