EKS/deployment-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upg-loadme
  namespace: demo
  labels:
    app: upg-loadme
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upg-loadme
  template:
    metadata:
      name: upg-loadme
      labels:
        app: upg-loadme
    spec:
      tolerations:
        - key: nodegroup
          operator: Equal
          value: pub-201-a-1-taint
          effect: NoSchedule
      containers:
        - name: upg-loadme
          image: '228426373888.dkr.ecr.us-east-1.amazonaws.com/upg-loadme-app:latest'
          ports:
            - containerPort: 80
          # limiting cpu & mem usage of a pod
          resources:
            requests:
              cpu: 800m
              memory: 400Mi
            limits:
              cpu: 1000m
              memory: 400Mi
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      dnsPolicy: ClusterFirst
      # add tolerations to restrict running on selected nodes

---
kind: Service
apiVersion: v1
metadata:
  name: upg-loadme
  namespace: demo
spec:
  selector:
    app: upg-loadme
  type: LoadBalancer
  ports:
  - name: app-port
    protocol: TCP
    port: 80
    targetPort: 80
